--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,9 +5,11 @@ phases:
       nodejs: 12
   pre_build:
     commands:
-       build: 
+      # - npm install
+      # - echo "We would use 'npm test' here to run our tests (if we had any)"
+  build: 
     commands:
-      - npm run build
+      # - npm run build
   post_build:
     commands:
       - aws s3 sync .
