--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,4 +12,4 @@ phases:
       # - npm run build
   post_build:
     commands:
-      - aws s3 sync .
+      - aws s3 sync ./build s3://nef-bucket-200406-java-react                                                                                                                                                                                                                
