--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "tsc && node ./build/index.js",
     "test": "jest --watch --no-cache",
-     "build": "tsc && cp ./src/index.html ./build/index.html && cp ./src/index.css ./build/index.css"
+    "build": "cp ./src/index.html ./build/index.html && cp ./src/index.css ./build/index.css"
   },
   "author": "Neftaly Polanco",
   "license": "ISC",
