--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "./build/index.js",
   "scripts": {
-    "start": "tsc && node ./build/index.js",
-    "test": "jest --watch --no-cache",
-    "build": "cp ./src/index.html ./build/index.html && cp ./src/index.css ./build/index.css"
+    "start":  "tsc && cp ./src/index.html ./build/index.html && cp ./src/index.css ./build/index.css && http-server -p 3000 ./build",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc && cp ./src/index.html ./build/index.html && cp ./src/index.css ./build/index.css"
   },
   "author": "Neftaly Polanco",
   "license": "ISC",
