buidspec.yml uncommented

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,11 +5,11 @@ phases:
       nodejs: 12
   pre_build:
     commands:
-      # - npm install
-      # - echo "We would use 'npm test' here to run our tests (if we had any)"
+      - npm install
+      - echo "We would use 'npm test' here to run our tests (if we had any)"
   build: 
     commands:
-      # - npm run build
+      - npm run build
   post_build:
     commands:
-      - aws s3 sync ./build s3://nef-bucket-200406-java-react                                                                                                                                                                                                                
+      - aws s3 sync ./build s3://nef-bucket-200406-java-react
