changed buildspec.yml postbuild command back to  bucket

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,10 +12,4 @@ phases:
       - npm run build
   post_build:
      commands:
-      - echo Build completed on `date`
-
-artifacts:
-  files:
-    - node_modules/**/*
-    - ./build/**/*
-    - package.json
+      - aws s3 sync ./build s3://nef-bucket-200406-java-react
